--- a/packages/tailwind/config.css
+++ b/packages/tailwind/config.css
@@ -2,7 +2,8 @@
     --color-primary: #EB5757;
     --color-primary-hover: #EF5788;
     --color-subtitle: #4E4D4D;
-    --color-title: "#404653";
+    --color-title: #404653;
     --color-secondary: #0073E6;
     --color-body: #404653;
+    --color-placeholder: rgb(110,110,110, 0.5)
 }
