--- a/packages/resume-ui/src/sidebar/styles.css
+++ b/packages/resume-ui/src/sidebar/styles.css
@@ -1,13 +1,31 @@
 .sidebar-outer-check:checked + .sidebar-outer-container {
   width: var(--expanded-width);
+
+  .feather-menu {
+    line:nth-child(2){
+      transform: scaleX(0.75);
+    }
+
+    line:nth-child(3){
+      transform: scaleX(0.5);
+    }
+  }
 }
 
 .sidebar-outer-container{
   width: var(--collapsed-width);
-  transition: width 0.3s ease-in-out;
+  transition: width var(--time) ease-in-out;
   overflow: hidden;
+
+  .feather-menu {
+    line {
+      transition: all var(--time) ease-in-out;
+    }
+  }
 }
 
 .sidebar-inner-container {
   width: var(--expanded-width);
 }
+
+
